--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
+    "react-spinners": "^0.15.0",
     "socket.io-client": "^4.8.1",
     "tailwind": "^4.0.0"
   },
